
########### install files ###############

install( FILES gimp.desktop xpaint.desktop xv.desktop  	     GnomeIconEditor.desktop Xpcd.desktop Xwpick.desktop  	     xfig.desktop Sketch.desktop Gqview.desktop GPhoto.desktop  	     GnomeColorSelector.desktop  ElectricEyes.desktop bitmap.desktop  	     tgif.desktop ghostview.desktop gv.desktop xdvi.desktop  	     sodipodi.desktop blender.desktop inkscape.desktop  DESTINATION  ${DATA_INSTALL_DIR}/kappfinder/apps/Graphics )


