
add_subdirectory( Terminal ) 



########### install files ###############

install( FILES arena.desktop netscape.desktop xftp.desktop              coolmail.desktop xfmail.desktop xbiff.desktop              xchat.desktop ethereal.desktop licq.desktop mozilla.desktop  	    BlueFish.desktop Dpsftp.desktop DrakSync.desktop Evolution.desktop  	    Faces.desktop Fetchmailconf.desktop Gabber.desktop   	    Galeon.desktop gFTP.desktop GnomeICU.desktop gnometalk.desktop gtelnet.desktop  	    Netscapemessenger.desktop Nmapfe.desktop  Pan.desktop  	    Sylpheed.desktop knews.desktop netscape6.desktop opera.desktop  	    gnomemeeting.desktop balsa.desktop dc_gui.desktop ed2k_gui.desktop  	    ickle.desktop mldonkey_gui.desktop btdownloadgui.desktop epiphany.desktop              gaim.desktop mozilla-thunderbird.desktop mozilla-firefox.desktop              javaws.desktop		wireshark.desktop  DESTINATION  ${DATA_INSTALL_DIR}/kappfinder/apps/Internet )




