install( FILES alevt.desktop  	alsamixergui.desktop  	audacity.desktop  	Aumix.desktop  	aviplay.desktop  	bcast2000.desktop  	enjoympeg.desktop  	Grip.desktop  	gtv.desktop  	jazz.desktop  	MP3info.desktop  	mplayer.desktop  	mtv.desktop  	ogle.desktop  	oqtplayer.desktop  	realplayer.desktop  	rezound.desktop  	slab.desktop  	sweep.desktop  	xawtv.desktop  	xcam.desktop  	xine.desktop  	xmms.desktop  	xmms-enqueue.desktop  	XMovie.desktop  DESTINATION  ${DATA_INSTALL_DIR}/kappfinder/apps/Multimedia )
