install( FILES TuxRacer.desktop ClanBomber.desktop  Gnibbles.desktop  	    rocksndiamonds.desktop  GnobotsII.desktop SuperMethaneBrothers.desktop  	    XKobo.desktop cxhextris.desktop Mures.desktop  Trophy.desktop  	    XSoldier.desktop alephone.desktop alephone-nogl.desktop FrozenBubble.desktop  DESTINATION  ${DATA_INSTALL_DIR}/kappfinder/apps/Games/Arcade )

