


########### install files ###############

install( FILES qmamecat.desktop  DESTINATION  ${DATA_INSTALL_DIR}/kappfinder/apps/Games/Emulators )




#original Makefile.am contents follow:

#kappfinder_games_emulators_data_DATA = qmamecat.desktop
#
#kappfinder_games_emulators_datadir = $(kde_datadir)/kappfinder/apps/Games/Emulators
#
#EXTRA_DIST = $(kappfinder_games_emulators_data_DATA)
